Fix user list action icon spacing

--- a/app/assets/stylesheets/controllers/user.scss
+++ b/app/assets/stylesheets/controllers/user.scss
@@ -48,6 +48,10 @@ table#users {
     padding: 0.5em;
   }
 
+  a .svg-inline--fa, span.icon {
+    margin: 0.5em;
+  }
+
   .very-narrow {
     width: 3em;
   }
